tests/models/enum/unnamed/i8/pass/le.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(le = 2)]
        i8
    ),
}
fn main() {}
